# Honeywell_Capstone_Streamlit

./: README.md  main.py  pyproject.toml  utils.py
