[project]
name = "honeywell-scope1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blake3>=1.0.4",
    "docling>=2.25.0",
    "matplotlib>=3.10.1",
    "pdf2image>=1.17.0",
    "streamlit>=1.42.2",
    "torch>=2.6.0",
    "transformers>=4.42.4",
]
